get/set PDV rewards distribution date tests
